--- a/index.html
+++ b/index.html
@@ -83,19 +83,26 @@ type: post
 <ul>
 	<li>社区
 	<ul>
-		<li><a href="http://bbs.liebao.cn/forum.php?mod=forumdisplay&fid=65&page=1">猎豹扩展插件</a>
-		</li>
-		<li><a href="http://code.ijinshan.com/">金山开源卫士</a>
-		</li>
+		<li><a href="https://101.camp/">蟒营™ 课程框架(</a>
+			</li>
+		<li><a href="https://py.101.camp/">蟒营™ Py入门班(</a>
+			</li>
+		<li><a href="https://fm.101.camp/">蟒营™ 电台(</a>
+			</li>
+		<li><a href="https://du.101.camp/">蟒营™ 自怼圈(</a>
+			</li>
 	</ul>
 	</li>
 	<li>大妈
 	<ul>
-		<li><a href="http://weibo.com/zoomquiet">Zoom.Quiet</a></li>
+		<li><a href="http://weibo.com/zoomquiet">ZoomQuiet</a></li>
 	</ul>
 	</li>
 	<li>网站
 	<ul>
+		<li><a href="https://blog.zoomquiet.io/">是也乎(￣▽￣)</a>
+			</li>
+<!--
 		<li><a href="http://techparty.org/">TechParty:珠三角技术沙龙 | 打造泛珠三角技术圈线上线下交流的平台</a>
 			</li>
 		<li><a href="http://pyconchina.github.io/pycoders-weekly-zh/archives.html">Archives | 蠎周刊 | 汇集全球蠎事儿!-)</a>
@@ -104,6 +111,14 @@ type: post
 			</li>
 		<li><a href="http://liebao.org.cn/">猎豹开发社 | 共享开发的乐趣;-)</a>
 			</li>
+-->
+		<li><a href="https://blog.zhgdg.org/">GDG珠海</a>
+			</li>
+		<li><a href="http://zh.tfug.world/">TFUG珠海</a>
+			</li>
+
+
+
 	</ul>
 	</li>
 
